--- a/style.css
+++ b/style.css
@@ -27,6 +27,15 @@ html, body {
 
 }
 
+select{
+  padding: 6px;
+  border: 1px solid #470b05;
+  background-color: #d3bd98;
+  color: #470b05;
+  font-size: 10px;
+  margin-bottom: 10px;
+}
+
 section.start{
   background-image: url("assets/background.png");
   background-position: center;
@@ -87,8 +96,8 @@ canvas {
   background-image: url(assets/modal.png) ;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 580px ;
-  height: 422px ;
+  /*width: 580px ;*/
+  height: 470px ;
   border-radius: 0px ;
   font-family: PressStart2P ;
   color: #5e0b04;
@@ -129,3 +138,5 @@ canvas {
   width: 32px;
   margin: 10px;
 }
+
+
